Closed Bug 204426 Opened 23 years ago Closed 23 years ago

Warnings in nsTypeAheadFind.cpp/nsTypeAheadFind.h

Categories

(SeaMonkey :: Find In Page, defect)

x86
BeOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

In file included from /swap/BEOS/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp:115: /swap/BEOS/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.h:270: warning: `class nsTypeAheadController' has virtual functions but non-virtual destructor /swap/BEOS/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp: In method `nsresult nsTypeAheadController::DoCommand(const char *)': /swap/BEOS/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp:2887: warning: unused variable `nsresult rv'
Attached patch changesSplinter Review
Attachment #122456 - Flags: superreview?(dbaron)
Attachment #122456 - Flags: review?(aaronl)
Comment on attachment 122456 [details] [diff] [review] changes I think we should turn off the warning about having non-virtual destructors in classes with virtual methods, but whatever...
Attachment #122456 - Flags: superreview?(dbaron) → superreview+
Attachment #122456 - Flags: review?(aaronl) → review+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
rs vrfy.
Status: RESOLVED → VERIFIED
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: