Bug 204426 Warnings in nsTypeAheadFind.cpp/nsTypeAheadFind.h r=aaronl sr=dbaron